# rust-axum-domain

./: .env.example  Cargo.toml  README.md  compose.yml
docker/local/rust/: Dockerfile
src/: main.rs
src/application/usecase/: mod.rs
src/application/usecase/context/: context_request.rs  mod.rs
src/application/usecase/logger/: logger_trait.rs  mod.rs
src/application/usecase/user/: mod.rs  user_find_all.rs  user_find_all_test.rs
src/config/: mod.rs
src/domain/error/: error_common.rs  mod.rs
src/domain/user/: mod.rs  user_model.rs  user_model_test.rs  user_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: database_dummy.rs  mod.rs
src/infrastructure/logger/: logger_log.rs  mod.rs
src/infrastructure/persistence/user/: user_repository.rs
src/presentation/: mod.rs
src/presentation/handler/user/: mod.rs  user_handler.rs  user_handler_test.rs
src/presentation/middleware/: common_middleware.rs
src/presentation/router/: mod.rs  router_settings.rs
src/registry/: mod.rs  registry_settings.rs
