[package]
name = "rust_axum_domain"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
envy = "0.4.2"
log = "0.4.27"
mockall = "0.13.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
test-env-helpers = "0.2.2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }
